--- a/escape-room-deployment.yaml
+++ b/escape-room-deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: escape-room-deployment
+  name: api-pod-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: escape-room
+      app: api-pod
   template:
     metadata:
       labels:
-        app: escape-room
+        app: api-pod
     spec:
       containers:
-      - name: escape-room-container
-        image: escape-room-image  # Use the name of your Docker image
+      - name: api-pod-container
+        image: api-pod-image  # Use the name of your Docker image
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80  # Port on which your Python application runs (if applicable)
