--- a/mongodb/mongodb-service.yaml
+++ b/mongodb/mongodb-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql-service
+  name: mongodb-service
 spec:
   selector:
-    app: mysql
+    app: mongodb
   ports:
   - protocol: TCP
-    port: 3306
-    targetPort: 3306
+    port: 27017
+    targetPort: 27017
